--- a/.github/workflows/httpx1.yml
+++ b/.github/workflows/httpx1.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Go (for httpx)
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'  # Use the appropriate Go version for httpx
+        go-version: '1.21'  # Update Go version to 1.21
 
     - name: Install httpx
       run: |
